add default font

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -9,5 +9,9 @@ body {
 }
 
 body, input, textarea, select, button {
-  
+  font: 400 1rem "Roboto", sans-serif;
+}
+
+button {
+  cursor: pointer;
 }
