--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,6 +15,12 @@
   --yellow-500: #eba417;
 }
 
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%; // 15px
+  }
+}
+
 body {
   background: var(--gray-900);
   color: var(--white);
