--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -21,6 +21,12 @@
   }
 }
 
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%; // 14px
+  }
+}
+
 body {
   background: var(--gray-900);
   color: var(--white);
