add header content styles

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -4,5 +4,10 @@
 }
 
 .headerContent {
-
+  max-width: 1120px;
+  height: 100%;
+  margin: 0 auto;
+  padding: 0 2rem;
+  display: flex;
+  align-items: center;
 }
