--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -14,5 +14,19 @@
   nav {
     margin-left: 5rem;
     height: 5rem;
+
+    a {
+      display: inline-block;
+      position: relative;
+      padding: 0 0.5rem;
+      height: 5rem;
+      line-height: 5rem;
+      color: var(--gray-300);
+      transition: color 0.2s ease-in-out;
+
+      &:hover {
+        color: var(--white);
+      }
+    }
   }
 }
