--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -24,6 +24,10 @@
       color: var(--gray-300);
       transition: color 0.2s ease-in-out;
 
+      & + a {
+        margin-left: 2rem;
+      }
+
       &:hover {
         color: var(--white);
       }
