--- a/src/components/SignInButton/styles.module.scss
+++ b/src/components/SignInButton/styles.module.scss
@@ -9,4 +9,13 @@
   justify-content: center;
   color: var(--white);
   font-weight: 700;
+
+  svg {
+    width: 20px;
+    height: 20px;
+  }
+
+  svg:first-child {
+    margin-right: 1rem;
+  }
 }
