--- a/src/components/SignInButton/styles.module.scss
+++ b/src/components/SignInButton/styles.module.scss
@@ -9,13 +9,18 @@
   justify-content: center;
   color: var(--white);
   font-weight: 700;
+  transition: filter 0.2s ease-in-out;
+
+  &:hover {
+    filter: brightness(0.8);
+  }
 
   svg {
     width: 20px;
     height: 20px;
-  }
 
-  svg:first-child {
-    margin-right: 1rem;
+    &:first-child {
+      margin-right: 1rem;
+    }
   }
 }
