--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,4 +1,11 @@
 .contentContainer {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 2rem;
+  height: calc(100vh -5rem);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .hero {
