--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,5 +1,5 @@
 .contentContainer {
-  max-width: 1100px;
+  max-width: 1120px;
   margin: 0 auto;
   padding: 0 2rem;
   height: calc(100vh - 5rem);
@@ -10,4 +10,9 @@
 
 .hero {
   max-width: 600px;
+
+  > span {
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
 }
