add styles to title

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -15,4 +15,15 @@
     font-size: 1.5rem;
     font-weight: 700;
   }
+
+  h1 {
+    font-size: 4.5rem;
+    line-height: 4.5rem;
+    font-weight: 900;
+    margin-top: 2.5rem;
+
+    span {
+      color: var(--cyan-500);
+    }
+  }
 }
