--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -26,4 +26,15 @@
       color: var(--cyan-500);
     }
   }
+
+  p {
+    font-size: 1.5rem;
+    line-height: 2.25rem;
+    margin-top: 1.5rem;
+
+    span {
+      color: var(--cyan-500);
+      font-weight: 700;
+    }
+  }
 }
