--- a/src/components/SubscribeButton/styles.module.scss
+++ b/src/components/SubscribeButton/styles.module.scss
@@ -11,4 +11,8 @@
   align-items: center;
   justify-content: center;
   transition: filter 0.2s;
+
+  &:hover {
+    filter: brightness(0.8);
+  }
 }
