add styles to date time

--- a/src/pages/posts/styles.module.scss
+++ b/src/pages/posts/styles.module.scss
@@ -16,5 +16,12 @@
       padding-top: 2rem;
       border-top: 1px solid var(--gray-700);
     }
+
+    time {
+      font-size: 1rem;
+      display: flex;
+      align-items: center;
+      color: var(--gray-300);
+    }
   }
 }
