--- a/src/pages/posts/styles.module.scss
+++ b/src/pages/posts/styles.module.scss
@@ -23,5 +23,12 @@
       align-items: center;
       color: var(--gray-300);
     }
+
+    strong {
+      display: block;
+      font-size: 1.5rem;
+      margin-top: 1rem;
+      line-height: 2rem;
+    }
   }
 }
