--- a/src/pages/posts/styles.module.scss
+++ b/src/pages/posts/styles.module.scss
@@ -30,5 +30,11 @@
       margin-top: 1rem;
       line-height: 2rem;
     }
+
+    p {
+      color: var(--gray-300);
+      margin-top: 0.5rem;
+      line-height: 1.625rem;
+    }
   }
 }
