--- a/src/pages/posts/post.module.scss
+++ b/src/pages/posts/post.module.scss
@@ -14,8 +14,30 @@
   }
 
   time {
+    display: block;
     font-size: 1rem;
     color: var(--gray-300);
     margin-top: 1.5rem;
   }
+
+  .postContent {
+    margin-top: 2rem;
+    line-height: 2rem;
+    font-size: 1.125rem;
+    color: var(--gray-100);
+
+    p, ul, ol {
+      margin: 1.5rem 0;
+    }
+
+    ul {
+      padding-left: 1,5rem;
+
+      li {
+        margin: 0.5rem 0;
+      }
+    }
+  }
 }
+
+
