--- a/src/pages/posts/post.module.scss
+++ b/src/pages/posts/post.module.scss
@@ -37,6 +37,12 @@
         margin: 0.5rem 0;
       }
     }
+
+    &.previewContent {
+      background: linear-gradient(var(--gray-800), transparent);
+      background-clip: text;
+      -webkit-background-clip: text;
+    }
   }
 }
 
