--- a/src/pages/posts/post.module.scss
+++ b/src/pages/posts/post.module.scss
@@ -46,4 +46,22 @@
   }
 }
 
+.continueReading {
+  padding: 2rem;
+  text-align: center;
+  background: var(--gray-950);
+  border-radius: 100px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin: 4rem 0 2rem;
 
+  a {
+    color: var(--purple-500);
+    text-decoration: none;
+    transition: color 0.2s;
+
+    &:hover {
+      color: var(--purple-400);
+    }
+  }
+}
